feat: Enhance User and OrderItem functionality
- Added secondaryCompanies and CompanyAssignmentType to UserDTO for better company management.
- Updated OrderItemDAO to support fetching orders by user ID and added new queries for filtering by city or user.
- Modified OrderItem entity to allow nullable city association.
- Introduced CompanyAssignmentType enum to differentiate between primary and auxiliary companies.
- Enhanced User entity to provide methods for retrieving primary and auxiliary companies.
- Updated UserCompany entity to include company assignment type.
- Improved OrderItemController to fetch user-specific orders.
- Refactored OrderItemService to handle user-specific order retrieval and status counts.
- Adjusted ExcelReportService to handle nullable city values and updated report structure.
- Fixed various issues in UserRole and User services for better role management.